# OSlicer

./: .gitignore  .gitmodules  README.md
OSlicer/: CMakeLists.txt  CMakePresets.json  vcpkg.json
OSlicer/src/: CMakeLists.txt  OSlicer.h  ospch.cpp  ospch.h
OSlicer/src/OSlicer/: EntryPoint.h
OSlicer/src/OSlicer/Asset/: Asset.h  AssetTypes.h
OSlicer/src/OSlicer/Core/: Application.cpp  Application.h  ApplicationSettings.cpp  ApplicationSettings.h  Assert.h  Base.h  Delegate.h  Hash.cpp  Hash.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Platform.cpp  Platform.h  Ref.cpp  Ref.h  Thread.h  TimeStep.cpp  TimeStep.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
OSlicer/src/OSlicer/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  SceneEvent.h
OSlicer/src/OSlicer/Core/Math/: AABB.h  Mat4.cpp  Ray.h
OSlicer/src/OSlicer/Debug/: Profiler.h
OSlicer/src/OSlicer/Editor/: EditorConsolePanel.cpp  EditorConsolePanel.h  EditorPanel.h  FontAwesome.h
OSlicer/src/OSlicer/Editor/EditorConsole/: ConsoleMessage.h  EditorConsoleSink.h
OSlicer/src/OSlicer/ImGui/: Colors.cpp  Colors.h  CustomTreeNode.cpp  ImGui.h  ImGuiBuild.cpp  ImGuiLayer.h  ImGuizmo.cpp  UICore.h  VulkanImGui.cpp
OSlicer/src/OSlicer/Math/: Mat4.h  Math.h
OSlicer/src/OSlicer/Platform/Vulkan/: Vulkan.cpp  Vulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h
OSlicer/src/OSlicer/Reflection/: TypeName.h  TypeStructures.h  TypeUtils.h
OSlicer/src/OSlicer/Renderer/: Camera.cpp  GPUStats.h  Image.h  Pipeline.cpp  Renderer.h  RendererAPI.h  RendererContext.cpp  RendererContext.h  RendererResource.h  VertexBuffer.h
OSlicer/src/OSlicer/Renderer/UI/: Font.cpp  MSDFData.h
OSlicer/src/OSlicer/Utilities/: FileSystem.h
OSlicer/src/Platform/Windows/: WindowsRenderThread.cpp  WindowsThread.cpp
Slice35/src/: CMakeLists.txt  EditorLayer.h  Slicer35.cpp
scripts/: build.sh
